x2goclient (4.0.1.0-0~x2go1) UNRELEASED; urgency=low

  [ Frédéric Motte ]
  * New upstream version (4.0.1.0):
    - Add French translation file.

  [ Oleksandr Shneyder ]
  * New upstream version (4.0.1.0):
    - Launching parec to init pulseaudio input only on Windows.
    - Hide profilecard area on broker authentication

  [ Mike Gabriel ]
  * New upstream version (4.0.1.0):
    - Fix position shifts of broker login widget on repetetive authentication
      failures. (Fixes: #71).

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Sun, 30 Dec 2012 15:41:04 +0100

x2goclient (4.0.0.3-0~x2go1) unstable; urgency=low

   * Fix version in version.h, VERSION and x2goplugin.rc.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 13 Feb 2013 14:37:24 +0100

x2goclient (4.0.0.2-0~x2go1) unstable; urgency=low

  [ Mike Gabriel ]
  * New upstream version (4.0.0.2):
    - More icon updates needed. Discovered during Debian package update.

  [ Orion Poplawski ]
  * New upstream version (4.0.0.2):
    - Fix .desktop file, fix FSF address. (Fixes: #88).

  [ Oleksandr Shneyder ]
  * New upstream version (4.0.0.2):
    - Fix support for RSA Keys in X2Go Broker code.
    - Set autologin as false by default. Quote session ID in SSH broker code
    - Support for session key "usebrokerpassforproxy" - use broker pass for
      authentication on proxy.
    - Fix X2Go Logo.
    - Terminate nxproxy from X2Go Client if connection to server is lost.
      (Fixes: #100)
    - Fix building x2goplugin.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Tue, 12 Feb 2013 19:29:53 +0100

x2goclient (4.0.0.1-0~x2go1) unstable; urgency=low

  * Bugfix release (4.0.0.1):
    - Replace symlink at svg/x2gologo.svg with copied file. Fixes
      tarball release esp. for MS Windows builds.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 02 Jan 2013 12:19:01 +0100

x2goclient (4.0.0.0-0~x2go1) unstable; urgency=low

  [ Christoffer Krakou ]
  * New upstream version (4.0.0.0):